--- a/swiper/index.html
+++ b/swiper/index.html
@@ -97,28 +97,16 @@
       <img class="prev" src="./images/prev.png" alt="" />
       <ul class="swiper-ul">
         <li>
-          <img
-            src="https://codehhr.coding.net/p/codehhr/d/wallpaper/git/raw/master/deer.jpg"
-            alt=""
-          />
+          <img src="./images/deer.jpg" alt="" />
         </li>
         <li>
-          <img
-            src="https://codehhr.coding.net/p/codehhr/d/wallpaper/git/raw/master/deer1.jpg"
-            alt=""
-          />
+          <img src="./images/deer1.jpg" alt="" />
         </li>
         <li>
-          <img
-            src="https://codehhr.coding.net/p/codehhr/d/wallpaper/git/raw/master/deer2.jpg"
-            alt=""
-          />
+          <img src="./images/deer2.jpg" alt="" />
         </li>
         <li>
-          <img
-            src="https://codehhr.coding.net/p/codehhr/d/wallpaper/git/raw/master/deer3.jpg"
-            alt=""
-          />
+          <img src="./images/deer3.jpg" alt="" />
         </li>
       </ul>
       <img class="next" src="./images/next.png" alt="" />
